--- a/source/_header.html
+++ b/source/_header.html
@@ -51,8 +51,7 @@
 
       <a href="index.html" class="header__logo logo">
         <picture>
-          <source type='image/webp' srcset='img/logo.webp'>
-          <img width='220' height='110' src='img/logo.png' alt='image'>
+          <img width='220' height='110' src='img/logo.svg' alt='image'>
         </picture>
       </a>
 
@@ -91,7 +90,7 @@
         </li>
       </ul>
 
-      <button class="connect-btn" data-replace>  <!--class='connected'--->
+      <button class="connect-btn onboard" data-replace>  <!--class='connected'--->
         <span>connect wallet</span>
       </button>
 
