--- a/source/_footer.html
+++ b/source/_footer.html
@@ -33,8 +33,7 @@
 
       <a href="index.html" class="footer__logo logo">
         <picture>
-          <source type='image/webp' srcset='img/logo.webp'>
-          <img width='220' height='110' src='img/logo.png' alt='image'>
+          <img width='220' height='110' src='img/logo.svg' alt='image'>
         </picture>
       </a>
 
