bug fix and connect metamask

--- a/source/_header.html
+++ b/source/_header.html
@@ -90,7 +90,7 @@
         </li>
       </ul>
 
-      <button class="connect-btn onboard" data-replace>  <!--class='connected'--->
+      <button class="connect-btn js-connect-wallet" data-replace>  <!--class='connected'--->
         <span>connect wallet</span>
       </button>
 
