--- a/source/regestration.html
+++ b/source/regestration.html
@@ -166,9 +166,18 @@
     </div>
   </div>
 
-  <script src="js/aos.js"></script>
-  <script src="js/swiper.min.js"></script>
-  <script src="js/common.min.js"></script>
+  <script type="text/javascript" src="js/jquery-3.6.0.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/web3modal-dynamic-import@1.11.1/dist/index.min.js"></script>
+  <script type="text/javascript" src="https://unpkg.com/evm-chains@0.2.0/dist/umd/index.min.js"></script>
+  <script type="text/javascript" src="https://unpkg.com/@walletconnect/web3-provider@1.7.5/dist/umd/index.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/ethjs@0.4.0/dist/ethjs.min.js"></script>
+
+  <script type="text/javascript" src="js/aos.min.js"></script>
+  <script type="text/javascript" src="js/swiper.min.js"></script>
+  <script type="text/javascript" src="js/MetaDAOGuildToken.min.js"></script>
+  <script type="text/javascript" src="js/web3-wallet.min.js"></script>
+  <script type="text/javascript" src="js/common.min.js"></script>
 </body>
 
 </html>
