bug fix && add log in page

--- a/source/_footer.html
+++ b/source/_footer.html
@@ -2,29 +2,29 @@
   <div class="container">
     <div class="footer">
       <nav class="nav footer__nav">
-        <ul class="nav__list footer__nav-list" >
+        <ul class="nav__list smooth-list footer__nav-list">
           <li class="nav__item">
-            <a href="#" class="nav__link">
+            <a href="https://docs.metadao.gg/" class="nav__link">
               whitepaper
             </a>
           </li>
           <li class="nav__item">
-            <a href="#" class="nav__link">
+            <a href="#Metarent" class="nav__link smooth">
               Meta rent
             </a>
           </li>
           <li class="nav__item">
-            <a href="#" class="nav__link">
+            <a href="#scoolarship" class="nav__link smooth">
               scoolarship
             </a>
           </li>
           <li class="nav__item">
-            <a href="#" class="nav__link">
+            <a href="#token" class="nav__link smooth">
               mogg token
             </a>
           </li>
           <li class="nav__item">
-            <a href="#" class="nav__link">
+            <a href="#team" class="nav__link smooth">
               team
             </a>
           </li>
@@ -134,18 +134,23 @@
 
         <ul class="login-list">
           <li class="login-list__item">
-            <a href="#" class="login-list__link">
+            <a href="login.html" class="login-list__link">
               log in
             </a>
           </li>
           <li class="login-list__item">
-            <a href="#" class="login-list__link">
+            <a href="regestration.html" class="login-list__link">
               sign up
             </a>
           </li>
         </ul>
       </div>
     </div>
+
+    <div class="footer-info">
+      Contact email for partnership: <a href="mailto:pr@metadao.gg">pr@metadao.gg</a> <br>
+      Support: <a href="mailto:support@metadao.gg">support@metadao.gg</a>
+  </div>
   </div>
 </footer>
 
