--- a/source/_header.html
+++ b/source/_header.html
@@ -11,29 +11,29 @@
 
 
       <nav class="nav header__nav" data-replace>
-        <ul class="nav__list">
+        <ul class="nav__list smooth-list">
           <li class="nav__item">
             <a href="https://docs.metadao.gg/" class="nav__link">
               whitepaper
             </a>
           </li>
           <li class="nav__item">
-            <a href="#Metarent" class="nav__link nav__link--anhor">
+            <a href="#Metarent" class="nav__link smooth">
               Meta rent
             </a>
           </li>
           <li class="nav__item">
-            <a href="#scoolarship" class="nav__link nav__link--anhor">
+            <a href="#scoolarship" class="nav__link smooth">
               scoolarship
             </a>
           </li>
           <li class="nav__item">
-            <a href="#token" class="nav__link nav__link--anhor">
+            <a href="#token" class="nav__link smooth">
               mogg token
             </a>
           </li>
           <li class="nav__item">
-            <a href="#team" class="nav__link nav__link--anhor">
+            <a href="#team" class="nav__link smooth">
               team
             </a>
           </li>
@@ -42,7 +42,7 @@
 
       <div class="mobile-left" left-inner>
 
-        <a href="regestration.html" class="mobile-link">
+        <a href="login.html" class="mobile-link">
           <svg width='20' height='20'>
             <use href='img/sprite/sprite.svg#profile'></use>
           </svg>
@@ -79,7 +79,7 @@
 
       <ul class="header__login" data-replace>
         <li class="header__login-item">
-          <a href="regestration.html" class="header__login-link">
+          <a href="login.html" class="header__login-link">
             log in
           </a>
         </li>
