--- a/source/forgot.html
+++ b/source/forgot.html
@@ -11,57 +11,21 @@
         <div class="regestration__box">
             <div class="regestration__box-top">
               <h2 class="regestration__title">
-                Sign in with your account:
+                PASSWORD RECOVERY
               </h2>
-              <p class="regestration__subtitle">
-                Sign in with your account:
-              </p>
-              <ul class="social regestration__social">
-                <li class="social__item">
-                  <a href="https://twitter.com/MetaDAOGuild" target="_blank">
-                    <svg width='28' height='22'>
-                      <use href='img/sprite/sprite.svg#discord'></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social__item">
-                  <a href="https://twitter.com/MetaDAOGuild" target="_blank">
-                    <svg width='22' height='22'>
-                      <use href='img/sprite/sprite.svg#google'></use>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
-              <p class="regestration__subtitle">
-                or via E-mail:
-              </p>
             </div>
+
             <form action="#" class="regestration__form">
               <div class="regestration__form-wrapper">
                 <label for="#">
-                  <input class="regestration__form-input" type="text" placeholder="Your name" required>
-                </label>
-                <label for="#">
                   <input class="regestration__form-input" type="email" placeholder="Email" required>
                 </label>
-                <label for="#">
-                  <input class="regestration__form-input" type="password" placeholder="Password" required>
-                </label>
-                <label for="#">
-                  <input class="regestration__form-input" type="password" placeholder="Confirm password" required>
-                </label>
-
-                <div class="checkbox">
-                  <label class="custom-checkbox">
-                    <input type="checkbox" name="confirm" required value="true">
-                    <span>I accept User Agreement.</span>
-                  </label>
-                </div>
               </div>
               <button class="regestration__form-btn radial-gradient-btn">
-                Sign up
+                Send
               </button>
             </form>
+
         </div>
 
         <div class="regestration__box">
@@ -74,12 +38,11 @@
             </p>
           </div>
           <form action="#" class="regestration__form">
-            <a href="login.html" class="regestration__form-btn radial-gradient-btn">
-              Log in to account
-            </ф>
+            <a href='login.html' class="regestration__form-btn radial-gradient-btn">
+              Log in
+            </a>
           </form>
       </div>
-
       </div>
     </section>
   </main>
