--- a/source/login.html
+++ b/source/login.html
@@ -11,7 +11,7 @@
         <div class="regestration__box">
             <div class="regestration__box-top">
               <h2 class="regestration__title">
-                Sign in with your account:
+                LOG IN TO YOUR ACCOUNT
               </h2>
               <p class="regestration__subtitle">
                 Sign in with your account:
@@ -36,50 +36,42 @@
                 or via E-mail:
               </p>
             </div>
+
             <form action="#" class="regestration__form">
               <div class="regestration__form-wrapper">
-                <label for="#">
-                  <input class="regestration__form-input" type="text" placeholder="Your name" required>
-                </label>
                 <label for="#">
                   <input class="regestration__form-input" type="email" placeholder="Email" required>
                 </label>
                 <label for="#">
                   <input class="regestration__form-input" type="password" placeholder="Password" required>
+                  <a href="forgot.html" class="forgot">
+                    Forgot your password?
+                  </a>
                 </label>
-                <label for="#">
-                  <input class="regestration__form-input" type="password" placeholder="Confirm password" required>
-                </label>
-
-                <div class="checkbox">
-                  <label class="custom-checkbox">
-                    <input type="checkbox" name="confirm" required value="true">
-                    <span>I accept User Agreement.</span>
-                  </label>
-                </div>
               </div>
               <button class="regestration__form-btn radial-gradient-btn">
-                Sign up
+                Log in to account
               </button>
             </form>
-        </div>
 
+        </div>
         <div class="regestration__box">
           <div class="regestration__box-top">
             <h2 class="regestration__title">
-              ALREADY HAVE AN ACCOUNT?
+              DON'T HAVE AN ACCOUNT?
             </h2>
             <p class="regestration__subtitle">
-              Log in to your account with your email and password
+              Sign up and start making money!
             </p>
           </div>
-          <form action="#" class="regestration__form">
-            <a href="login.html" class="regestration__form-btn radial-gradient-btn">
-              Log in to account
-            </ф>
-          </form>
-      </div>
 
+          <form action="#" class="regestration__form">
+            <a href="regestration.html" class="regestration__form-btn radial-gradient-btn">
+              Sign up
+            </a>
+          </form>
+
+      </div>
       </div>
     </section>
   </main>
