--- a/source/_head.html
+++ b/source/_head.html
@@ -2,9 +2,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="Description" content="default">
+  <link rel="shortcut icon" href="img/favicon.ico" />
+	<link rel="icon" href="img/favicon.ico" type="image/x-icon" />
   <title>metaDAO</title>
   <script src="js/picturefill.min.js" async="async"></script>
-  <link href="img/fav.png" rel="icon"/>
   <link rel="preload" href="fonts/GothamPro-Light.woff2" as="font" crossorigin="anonymous">
   <link rel="preload" href="fonts/GothamPro.woff2" as="font" crossorigin="anonymous">
   <link rel="preload" href="fonts/GothamPro-Medium.woff2" as="font" crossorigin="anonymous">
